Fixed the issue properly this time.
.grid was not given height. overflow:auto worked, but occasionally
produced unwanted scrollbars.
By modifying the clearfix code, and applying it not only to rows, but
also grids, we fix the collapsed margin problem.

--- a/hella.css
+++ b/hella.css
@@ -1,15 +1,14 @@
 .grid {
-	overflow:auto;
 	width:100%;
 	padding: 0 32px;
 	max-width:960px;
 	margin: 0 auto;
 	box-sizing: border-box;
 }
-.row:after{
+.row:after, .grid:after{
 	clear:both;
 	content:"";
-	display:block;
+	display:table;
 }
 .column{
 	width:100%;
